# fraud-detection

./: .env.example  .gitignore  README.md  app.py  main.py  pre_processing.py  pyproject.toml
assets/: demo.webm
src/: graph.py
src/core/: config.py  langfuse.py
src/database/: __init__.py
src/modules/agents/: supervisor_agent.py
src/modules/const/: enum.py
src/modules/schemas/: state_schema.py
src/modules/services/: pdf_service.py  tabular_data_service.py
src/modules/tools/: pdf_tool.py  tabular_data_tool.py
src/modules/utils/: supervisor_util.py
