[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.13",
    "pandas>=2.3.3",
    "psycopg[binary,pool]>=3.2.12",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
]
